--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <div id="top"></div>
   <!-- HEADER -->
   <header class="site-header">
     <div class="container header-row">
@@ -20,7 +21,8 @@
       </a>
 
       <nav class="nav">
-        <!-- Navigation links will go here -->
+        <a href="#services" class="nav-strong">Services</a>
+        <a href="#work" class="nav-strong">Work</a>
       </nav>
 
       <button class="menu-btn" id="menuBtn" aria-label="Open menu" aria-expanded="false">☰</button>
@@ -28,11 +30,12 @@
 
     <!-- Mobile menu -->
     <div class="mobile-nav" id="mobileNav">
-      <!-- Mobile navigation links will go here -->
+      <a href="#services">Services</a>
+      <a href="#work">Work</a>
     </div>
   </header>
 
-  <main id="top">
+  <main>
     <!-- HERO SECTION -->
     <section class="hero">
       <div class="container hero-content">
@@ -43,7 +46,7 @@
           <h2 class="hero-title-sub">Not just dashboards.</h2>
           <p class="hero-description">We build analytics systems that stay consistent;
 so your team can move faster with confidence.</p>
-          <a href="#" class="cta-button">Get Started Now</a>
+          <a href="https://calendar.app.google/YaRjgie3NBDr8Vaf8" class="cta-button" target="_blank" rel="noopener">Get Started Now</a>
         </div>
         <div class="hero-right">
           <img src="images/front pic.png" alt="Analytics" class="hero-image">
@@ -52,7 +55,7 @@ so your team can move faster with confidence.</p>
     </section>
 
     <!-- CONTENT SECTIONS WILL BE ADDED HERE -->
-    <section class="section features-section">
+    <section class="section features-section" id="services">
       <div class="container">
         <h2 class="features-title">What We Are Offering</h2>
         <div class="features-grid">
@@ -145,7 +148,7 @@ so your team can move faster with confidence.</p>
       </div>
     </section>
 
-    <section class="section delivered-section">
+    <section class="section delivered-section" id="work">
       <div class="container delivered-layout">
         <div class="delivered-title">
           <h2>What We’ve Delivered</h2>
@@ -158,7 +161,7 @@ so your team can move faster with confidence.</p>
                 <span class="delivered-card-field">Healthcare</span>
               </div>
               <h3>Supply Chain &amp; Material Consumption Analytics</h3>
-              <p>Built a full analytics system for hospital supply chain performance — from master data cleanup and item standardization to usage, inventory, and procurement reporting. Included SOPs to ensure new item creation stays consistent long-term.</p>
+              <p>Built a full analytics system for hospital supply chain performance, from master data cleanup and item standardization to usage, inventory, and procurement reporting. Included SOPs to ensure new item creation stays consistent long-term.</p>
               <div class="delivered-card-chips">
                 <span class="chip">Supply Chain Analytics</span>
                 <span class="chip">Master Data</span>
@@ -231,6 +234,18 @@ so your team can move faster with confidence.</p>
       </div>
     </section>
 
+    <section class="section cta-section">
+      <div class="container cta-layout">
+        <div class="cta-content">
+          <h2 class="cta-title">Build the analytics foundation your team can actually trust.</h2>
+          <a class="cta-button-white" href="https://calendar.app.google/YaRjgie3NBDr8Vaf8" target="_blank" rel="noopener">Book a Discovery Call</a>
+        </div>
+        <div class="cta-details">
+          <p class="cta-text">Whether you’re building Power BI from scratch or optimizing performance, a discovery call will help us define the right track and turn your data into action.</p>
+        </div>
+      </div>
+    </section>
+
     <!-- Expanded Details Modal -->
     <div id="expandedModal" class="expanded-modal" style="display: none;">
       <div class="expanded-content">
@@ -242,7 +257,7 @@ so your team can move faster with confidence.</p>
 
   <footer class="footer">
     <div class="container footer-row">
-      <p class="muted">© <span id="year"></span> Data 14</p>
+      <p class="muted">© 2026 data14. All rights reserved.</p>
     </div>
   </footer>
 
