--- a/index.html
+++ b/index.html
@@ -21,8 +21,21 @@
       </a>
 
       <nav class="nav">
-        <a href="#services" class="nav-strong">Services</a>
-        <a href="#work" class="nav-strong">Work</a>
+        <a href="index.html#top" class="nav-strong">Home</a>
+        <div class="nav-item dropdown">
+          <a href="#services" class="nav-strong">Services</a>
+          <div class="dropdown-menu">
+            <a href="#services">Power BI Delivery Track</a>
+            <div class="dropdown-sub">
+              <a href="#services">Specialty Performance Track</a>
+              <div class="dropdown-menu dropdown-menu-right">
+                <a href="healthcare-supply-chain-analytics.html">Healthcare Supply Chain Analytics</a>
+                <a href="marketing-analytics.html">Marketing Performance Analytics</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <a href="#work" class="nav-strong">Case Studies</a>
       </nav>
 
       <button class="menu-btn" id="menuBtn" aria-label="Open menu" aria-expanded="false">☰</button>
@@ -30,8 +43,9 @@
 
     <!-- Mobile menu -->
     <div class="mobile-nav" id="mobileNav">
+      <a href="index.html#top">Home</a>
       <a href="#services">Services</a>
-      <a href="#work">Work</a>
+      <a href="#work">Case Studies</a>
     </div>
   </header>
 
