--- a/marketing-analytics.html
+++ b/marketing-analytics.html
@@ -17,15 +17,29 @@
         <img src="images/logo.png" alt="Data 14 Logo" class="header-logo">
       </a>
       <nav class="nav">
-        <a href="index.html#services" class="nav-strong">Services</a>
-        <a href="index.html#work" class="nav-strong">Work</a>
+        <a href="index.html#top" class="nav-strong">Home</a>
+        <div class="nav-item dropdown">
+          <a href="index.html#services" class="nav-strong">Services</a>
+          <div class="dropdown-menu">
+            <a href="index.html#services">Power BI Delivery Track</a>
+            <div class="dropdown-sub">
+              <a href="index.html#services">Specialty Performance Track</a>
+              <div class="dropdown-menu dropdown-menu-right">
+                <a href="healthcare-supply-chain-analytics.html">Healthcare Supply Chain Analytics</a>
+                <a href="marketing-analytics.html">Marketing Performance Analytics</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <a href="index.html#work" class="nav-strong">Case Studies</a>
         <a href="https://calendar.app.google/YaRjgie3NBDr8Vaf8" class="nav-cta" target="_blank" rel="noopener">Book a Call</a>
       </nav>
       <button class="menu-btn" id="menuBtn" aria-label="Open menu" aria-expanded="false">☰</button>
     </div>
     <div class="mobile-nav" id="mobileNav">
+      <a href="index.html#top">Home</a>
       <a href="index.html#services">Services</a>
-      <a href="index.html#work">Work</a>
+      <a href="index.html#work">Case Studies</a>
       <a href="https://calendar.app.google/YaRjgie3NBDr8Vaf8" target="_blank" rel="noopener">Book a Call</a>
     </div>
   </header>
