--- a/healthcare-supply-chain-analytics.html
+++ b/healthcare-supply-chain-analytics.html
@@ -19,11 +19,11 @@
       <nav class="nav">
         <a href="index.html#top" class="nav-strong">Home</a>
         <div class="nav-item dropdown">
-          <a href="index.html#services" class="nav-strong">Services</a>
+          <a href="index.html#services" class="nav-strong dropdown-toggle" aria-expanded="false">Services</a>
           <div class="dropdown-menu">
             <a href="index.html#services">Power BI Delivery Track</a>
             <div class="dropdown-sub">
-              <a href="index.html#services">Specialty Performance Track</a>
+              <a href="index.html#services" class="dropdown-sub-toggle" aria-expanded="false">Specialty Performance Track</a>
               <div class="dropdown-menu dropdown-menu-right">
                 <a href="healthcare-supply-chain-analytics.html">Healthcare Supply Chain Analytics</a>
                 <a href="marketing-analytics.html">Marketing Performance Analytics</a>
