Editing the commit message for the changes made to the healthcare supply chain analytics site. The following files were modified or added:

--- a/contact.html
+++ b/contact.html
@@ -13,33 +13,33 @@
 <body>
   <header class="site-header">
     <div class="container header-row">
-      <a class="brand" href="index.html">
+      <a class="brand" href="/">
         <img src="images/logo.png" alt="Data 14 Logo" class="header-logo">
       </a>
       <nav class="nav">
-        <a href="index.html#top" class="nav-strong">Home</a>
+        <a href="/#top" class="nav-strong">Home</a>
         <div class="nav-item dropdown">
-          <a href="index.html#services" class="nav-strong dropdown-toggle" aria-expanded="false">Services</a>
+          <a href="/#services" class="nav-strong dropdown-toggle" aria-expanded="false">Services</a>
           <div class="dropdown-menu">
-            <a href="index.html#services">Power BI Delivery Track</a>
+            <a href="/#services">Power BI Delivery Track</a>
             <div class="dropdown-sub">
-              <a href="index.html#services" class="dropdown-sub-toggle" aria-expanded="false">Specialty Performance Track</a>
+              <a href="/#services" class="dropdown-sub-toggle" aria-expanded="false">Specialty Performance Track</a>
               <div class="dropdown-menu dropdown-menu-right">
-                <a href="healthcare-supply-chain-analytics.html">Healthcare Supply Chain Analytics</a>
-                <a href="marketing-analytics.html">Marketing Performance Analytics</a>
+                <a href="/healthcare-supply-chain-analytics/">Healthcare Supply Chain Analytics</a>
+                <a href="/marketing-analytics/">Marketing Performance Analytics</a>
               </div>
             </div>
           </div>
         </div>
-        <a href="index.html#work" class="nav-strong">Case Studies</a>
+        <a href="/#work" class="nav-strong">Case Studies</a>
         <a href="https://calendar.app.google/YaRjgie3NBDr8Vaf8" class="nav-cta" target="_blank" rel="noopener">Book a Call</a>
       </nav>
       <button class="menu-btn" id="menuBtn" aria-label="Open menu" aria-expanded="false">☰</button>
     </div>
     <div class="mobile-nav" id="mobileNav">
-      <a href="index.html#top">Home</a>
-      <a href="index.html#services">Services</a>
-      <a href="index.html#work">Case Studies</a>
+      <a href="/#top">Home</a>
+      <a href="/#services">Services</a>
+      <a href="/#work">Case Studies</a>
       <a href="https://calendar.app.google/YaRjgie3NBDr8Vaf8" target="_blank" rel="noopener">Book a Call</a>
     </div>
   </header>
