--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Your Company</title>
-  <meta name="description" content="Your company description" />
+  <title>data14</title>
+  <meta name="description" content="data14" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Actor&display=swap" rel="stylesheet">
@@ -16,26 +16,26 @@
   <!-- HEADER -->
   <header class="site-header">
     <div class="container header-row">
-      <a class="brand" href="#top">
+      <a class="brand" href="/#top">
         <img src="images/logo.png" alt="Data 14 Logo" class="header-logo">
       </a>
 
       <nav class="nav">
-        <a href="index.html#top" class="nav-strong">Home</a>
+        <a href="/#top" class="nav-strong">Home</a>
         <div class="nav-item dropdown">
-          <a href="#services" class="nav-strong dropdown-toggle" aria-expanded="false">Services</a>
+          <a href="/#services" class="nav-strong dropdown-toggle" aria-expanded="false">Services</a>
           <div class="dropdown-menu">
-            <a href="#services">Power BI Delivery Track</a>
+            <a href="/#services">Power BI Delivery Track</a>
             <div class="dropdown-sub">
-              <a href="#services" class="dropdown-sub-toggle" aria-expanded="false">Specialty Performance Track</a>
+              <a href="/#services" class="dropdown-sub-toggle" aria-expanded="false">Specialty Performance Track</a>
               <div class="dropdown-menu dropdown-menu-right">
-                <a href="healthcare-supply-chain-analytics.html">Healthcare Supply Chain Analytics</a>
-                <a href="marketing-analytics.html">Marketing Performance Analytics</a>
+                <a href="/healthcare-supply-chain-analytics/">Healthcare Supply Chain Analytics</a>
+                <a href="/marketing-analytics/">Marketing Performance Analytics</a>
               </div>
             </div>
           </div>
         </div>
-        <a href="#work" class="nav-strong">Case Studies</a>
+        <a href="/#work" class="nav-strong">Case Studies</a>
       </nav>
 
       <button class="menu-btn" id="menuBtn" aria-label="Open menu" aria-expanded="false">☰</button>
@@ -43,9 +43,9 @@
 
     <!-- Mobile menu -->
     <div class="mobile-nav" id="mobileNav">
-      <a href="index.html#top">Home</a>
-      <a href="#services">Services</a>
-      <a href="#work">Case Studies</a>
+      <a href="/#top">Home</a>
+      <a href="/#services">Services</a>
+      <a href="/#work">Case Studies</a>
     </div>
   </header>
 
