--- a/marketing-analytics/index.html
+++ b/marketing-analytics/index.html
@@ -8,13 +8,13 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Actor&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
   <header class="site-header">
     <div class="container header-row">
       <a class="brand" href="/">
-        <img src="images/logo.png" alt="Data 14 Logo" class="header-logo">
+        <img src="/images/logo.png" alt="Data 14 Logo" class="header-logo">
       </a>
       <nav class="nav">
         <a href="/#top" class="nav-strong">Home</a>
@@ -196,6 +196,6 @@
     </div>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="/script.js"></script>
 </body>
 </html>
